# generate-xlsx

./: .tool-versions  docker-compose.yml
deno/: deno.jsonc  generateXlsx.js  package-lock.json  package.json
go/: .gitignore  go.mod  go.sum  main.go
node/: generateData.js  generateXlsx.js  package-lock.json  package.json
node/prisma/: schema.prisma
node/prisma/migrations/20230606231633_init/: migration.sql
node/prisma/migrations/20230607001124_init/: migration.sql
node/prisma/migrations/20230607010511_init/: migration.sql
python/: index.py
rust/: .dockerignore  .tool-versions  Cargo.toml  Dockerfile
rust/src/: main.rs  row_xlsx.rs
