[package]
name = "xlsx_writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frunk = "0.4.1"
mysql = "24.0.0"
simple-xlsx-writer = {git = "https://github.com/Pedroh1510/simple-xlsx-writer", branch="master"} 
